# vector-extensions

./: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE-3rdparty.csv  Makefile  README.md
.cargo/: config.toml
.github/workflows/: build_image.yml  check.yml  ci.yml  integration_test.yml  push-image.yml  push_image.yml  quick_check.yml  release-docker.yml  release_sync_image.yml
extensions/aws-s3-upload-file/: Cargo.toml
extensions/aws-s3-upload-file/src/: config.rs  etag_calculator.rs  lib.rs  processor.rs  uploader.rs
extensions/common/: Cargo.toml
extensions/common/src/: checkpointer.rs
extensions/conprof/: Cargo.toml
extensions/conprof/src/: controller.rs  lib.rs  shutdown.rs  upstream.rs
extensions/conprof/src/topology/: mod.rs
extensions/filename/: Cargo.toml
extensions/filename/src/: lib.rs
extensions/gcp-cloud-storage-upload-file/: Cargo.toml
extensions/gcp-cloud-storage-upload-file/src/: config.rs  lib.rs  processor.rs  uploader.rs
extensions/topsql/: Cargo.toml  build.rs
extensions/topsql/src/: config.rs  controller.rs  lib.rs
extensions/topsql/src/topology/fetch/: mod.rs  pd.rs  store.rs  tidb.rs
extensions/topsql/src/topology/fetch/mock/: pd.rs  store.rs
extensions/topsql/src/upstream/: mod.rs  parser.rs  tls_proxy.rs  utils.rs
extensions/topsql/src/upstream/tidb/: mock_upstream.rs  mod.rs  parser.rs  proto.rs
extensions/topsql/src/upstream/tikv/: mock_upstream.rs  mod.rs  parser.rs  proto.rs
extensions/vm-import/: Cargo.toml
extensions/vm-import/src/: config.rs  encoder.rs  lib.rs  partition.rs  sink.rs
scripts/: build-docker.sh  release-docker.sh  version.sh
scripts/cross/: aarch64-unknown-linux-gnu.dockerfile  aarch64-unknown-linux-musl.dockerfile  armv7-unknown-linux-gnueabihf.dockerfile  armv7-unknown-linux-musleabihf.dockerfile  bootstrap-ubuntu-aarch64.sh  bootstrap-ubuntu-x64.sh  bootstrap-ubuntu.sh  x86_64-unknown-linux-gnu.dockerfile  x86_64-unknown-linux-musl.dockerfile
scripts/docker/: Dockerfile
scripts/integration/: docker-compose.yml  tiup-playground.dockerfile  vector.dockerfile
scripts/integration/data/: run-test.sh  sysbench.sh  vector.toml
src/: main.rs
src/common/: checkpointer.rs  mod.rs
src/sinks/: mod.rs
src/sinks/aws_s3_upload_file/: etag_calculator.rs  mod.rs  processor.rs  uploader.rs
src/sinks/azure_blob_upload_file/: mod.rs  processor.rs  uploader.rs
src/sinks/gcp_cloud_storage_upload_file/: mod.rs  processor.rs  uploader.rs
src/sinks/vm_import/: encoder.rs  mod.rs  sink.rs
src/sources/: filename.rs  keyviz.rs  mod.rs
src/sources/conprof/: controller.rs  mod.rs  upstream.rs
src/sources/conprof/tools/: mod.rs
src/sources/conprof/topology/fetch/: mod.rs  pd.rs  store.rs  tidb.rs
src/sources/topsql/: controller.rs  mod.rs  schema_cache.rs  shutdown.rs
src/sources/topsql/topology/fetch/: mod.rs  pd.rs  store.rs  tidb.rs
src/sources/topsql/upstream/: mod.rs  parser.rs  tls_proxy.rs  utils.rs
src/sources/topsql/upstream/tidb/: mock_upstream.rs  mod.rs  parser.rs  proto.rs
src/sources/topsql/upstream/tidb/testdata/: mock-records.json
src/sources/topsql/upstream/tikv/: mock_upstream.rs  mod.rs  parser.rs  proto.rs
src/sources/topsql/upstream/tikv/testdata/: mock-records.json
tests/: topsql_vm.rs
topsql/: Cargo.toml
topsql/src/upstream/: mod.rs  tls_proxy.rs
vm-import/: Cargo.toml
vm-import/src/: lib.rs
