[package]
name = "vector-extensions"
version = "0.31.0"
edition = "2021"
readme = "README.md"
publish = false
default-run = "vector"

[[bin]]
path = "src/main.rs"
name = "vector"

[features]
default = [
    "topsql",
    "conprof",
    "vm-import",
    "aws-s3-upload-file",
    "gcp-cloud-storage-upload-file",
    "filename",
]

topsql = ["dep:topsql"]
conprof = ["dep:conprof"]
vm-import = ["dep:vm-import"]
aws-s3-upload-file = ["dep:aws-s3-upload-file"]
gcp-cloud-storage-upload-file = ["dep:gcp-cloud-storage-upload-file"]
filename = ["dep:filename"]

[dependencies]
aws-s3-upload-file = { path = "extensions/aws-s3-upload-file", optional = true }
conprof = { path = "extensions/conprof", optional = true }
filename = { path = "extensions/filename", optional = true }
gcp-cloud-storage-upload-file = { path = "extensions/gcp-cloud-storage-upload-file", optional = true }
topsql = { path = "extensions/topsql", optional = true }
vm-import = { path = "extensions/vm-import", optional = true }

exitcode = { version = "1.1.2", default-features = false }
inventory = { version = "0.3.6", default-features = false }
vector = { git = "https://github.com/vectordotdev/vector", tag = "v0.31.0", default-features = false }
vector-config = { git = "https://github.com/vectordotdev/vector", tag = "v0.31.0", default-features = false }

[dev-dependencies]
hyper = { version = "0.14.20", default-features = false, features = [
    "client",
    "runtime",
    "http1",
    "http2",
    "server",
    "stream",
] }
lazy_static = "1.4.0"
regex = "1.6.0"
tokio = { version = "1.20.4", default-features = false, features = ["full"] }
url = "2.3.1"

[workspace]
members = [
    "extensions/aws-s3-upload-file",
    "extensions/conprof",
    "extensions/filename",
    "extensions/gcp-cloud-storage-upload-file",
    "extensions/topsql",
    "extensions/vm-import",
    "packages/common",
    "vdev",
]

[patch.'https://github.com/vectordotdev/vector']
vector = { git = "https://github.com/mornyx/vector", branch = "extend-0.31" }
vector-core = { git = "https://github.com/mornyx/vector", branch = "extend-0.31" }
vector-common = { git = "https://github.com/mornyx/vector", branch = "extend-0.31" }
vector-config = { git = "https://github.com/mornyx/vector", branch = "extend-0.31" }
vector-config-common = { git = "https://github.com/mornyx/vector", branch = "extend-0.31" }
vector-config-macros = { git = "https://github.com/mornyx/vector", branch = "extend-0.31" }

[patch.crates-io]
# The upgrade for `tokio-util` >= 0.6.9 is blocked on https://github.com/vectordotdev/vector/issues/11257.
tokio-util = { git = "https://github.com/vectordotdev/tokio", version = "0.7", rev = "53a17f257b599a9d18bd75249de98d0b6fc28cfa" }
