[package]
name = "vector-extensions"
version = "0.37.1"
edition = "2021"
readme = "README.md"
publish = false
default-run = "vector"

[[bin]]
path = "src/main.rs"
name = "vector"

[dependencies]
async-recursion = "1.0.0"
async-trait = { version = "0.1.78", default-features = false }
aws-sdk-s3 = { version = "1.4.0", default-features = false, features = ["behavior-version-latest"] }
aws-smithy-types = { version = "1.1.8", default-features = false }
base64 = { version = "0.22.0", default-features = false }
bytes = { version = "1.5.0", default-features = false, features = ["serde"] }
chrono = { version = "0.4.34", default-features = false, features = ["clock", "serde"] }
etcd-client = { version = "0.9", features = ["tls-roots"] }
exitcode = { version = "1.1.2", default-features = false }
file-source = { git = "https://github.com/vectordotdev/vector", tag = "v0.37.1" }
flate2 = { version = "1.0.28", default-features = false, features = ["default"] }
futures = { version = "0.3.30", default-features = false, features = ["compat", "io-compat"], package = "futures" }
futures-util = { version = "0.3.29", default-features = false }
goauth = { version = "0.14.0" }
hex = { version = "0.4.3", default-features = false }
http = { version = "0.2.9", default-features = false }
hyper = { version = "0.14.28", default-features = false, features = ["client", "runtime", "http1", "http2", "server", "stream"] }
inventory = { version = "0.3.15", default-features = false }
md-5 = { version = "0.10", default-features = false }
metrics = "0.21.1"
ordered-float = { version = "4.2.0", default-features = false }
prost = { version = "0.12", default-features = false, features = ["std"] }
prost-types = { version = "0.12", default-features = false }
reqwest = { version = "0.11", features = ["native-tls"] }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.114", default-features = false, features = ["std", "raw_value"] }
snafu = { version = "0.7.5", default-features = false, features = ["futures"] }
tokio = { version = "1.36.0", default-features = false, features = ["full"] }
tokio-openssl = { version = "0.6.4", default-features = false }
tokio-stream = { version = "0.1.15", default-features = false, features = ["net", "sync", "time"] }
tokio-util = { version = "0.7", default-features = false, features = ["io", "time"] }
toml = { version = "0.8.12", default-features = false }
tonic = { version = "0.10", default-features = false, features = ["transport", "codegen", "prost", "tls", "tls-roots", "gzip"] }
tracing = { version = "0.1.34", default-features = false }
tracing-futures = { version = "0.2.5", default-features = false, features = ["futures-03"] }
typetag = { version = "0.2.16", default-features = false }
url = { version = "2.5.0", default-features = false, features = ["serde"] }
vector = { git = "https://github.com/vectordotdev/vector", tag = "v0.37.1", default-features = false, features = ["aws-config", "sinks-aws_s3", "gcp", "sinks-gcp"] }
vector-config = { git = "https://github.com/vectordotdev/vector", tag = "v0.37.1", default-features = false }
vector-lib = { git = "https://github.com/vectordotdev/vector", tag = "v0.37.1", default-features = false }

[dev-dependencies]
lazy_static = "1.4.0"
rand = "0.8"
regex = "1.10.3"

[build-dependencies]
prost-build = { version = "0.12", default-features = false }
tonic-build = { version = "0.10", default-features = false, features = ["transport", "prost"] }

[workspace]
members = ["vdev"]

[workspace.dependencies]
chrono = { version = "0.4.34", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5.3", default-features = false, features = ["derive", "error-context", "env", "help", "std", "string", "usage", "wrap_help"] }
indexmap = { version = "2.2.5", default-features = false, features = ["serde", "std"] }
serde = { version = "1.0.197", default-features = false, features = ["alloc", "derive", "rc"] }
serde_json = { version = "1.0.114", default-features = false, features = ["raw_value", "std"] }
toml = { version = "0.8.12", default-features = false, features = ["display", "parse"] }
