[package]
name = "vector-extensions"
version = "0.37.1"
edition = "2021"
readme = "README.md"
publish = false
default-run = "vector"

[[bin]]
path = "src/main.rs"
name = "vector"

[dependencies]
async-recursion = "1.0.0"
async-trait = { version = "0.1.78", default-features = false }
aws-sdk-s3 = { version = "1.4.0", default-features = false, features = ["behavior-version-latest"] }
aws-smithy-types = { version = "1.1.8", default-features = false }
azure_storage_blobs = { version = "0.17", default-features = false, features = ["enable_reqwest"] }
base64 = { version = "0.22.0", default-features = false }
bytes = { version = "1.5.0", default-features = false, features = ["serde"] }
chrono = { version = "0.4.34", default-features = false, features = ["clock", "serde"] }
etcd-client = { version = "0.9", features = ["tls-roots"] }
exitcode = { version = "1.1.2", default-features = false }
file-source = { git = "https://github.com/vectordotdev/vector", tag = "v0.37.1" }
flate2 = { version = "1.0.28", default-features = false, features = ["default"] }
futures = { version = "0.3.30", default-features = false, features = ["compat", "io-compat"], package = "futures" }
futures-util = { version = "0.3.29", default-features = false }
goauth = { version = "0.14.0" }
hex = { version = "0.4.3", default-features = false }
http = { version = "0.2.9", default-features = false }
hyper = { version = "0.14.28", default-features = false, features = ["client", "runtime", "http1", "http2", "server", "stream"] }
inventory = { version = "0.3.15", default-features = false }
md-5 = { version = "0.10", default-features = false }
metrics = "0.21.1"
ordered-float = { version = "4.2.0", default-features = false }
prost = { version = "0.12", default-features = false, features = ["std"] }
prost-types = { version = "0.12", default-features = false }
rand = "0.8"
reqwest = { version = "0.11.26", features = ["native-tls"] }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.114", default-features = false, features = ["std", "raw_value"] }
snafu = { version = "0.7.5", default-features = false, features = ["futures"] }
tokio = { version = "1.36.0", default-features = false, features = ["full"] }
tokio-openssl = { version = "0.6.4", default-features = false }
tokio-stream = { version = "0.1.15", default-features = false, features = ["net", "sync", "time"] }
tokio-util = { version = "0.7", default-features = false, features = ["io", "time"] }
toml = { version = "0.8.12", default-features = false }
tonic = { version = "0.10", default-features = false, features = ["transport", "codegen", "prost", "tls", "tls-roots", "gzip"] }
tracing = { version = "0.1.34", default-features = false }
tracing-futures = { version = "0.2.5", default-features = false, features = ["futures-03"] }
typetag = { version = "0.2.16", default-features = false }
url = { version = "2.5.0", default-features = false, features = ["serde"] }
vector = { git = "https://github.com/vectordotdev/vector", tag = "v0.37.1", default-features = false, features = ["aws-config", "sinks-aws_s3", "gcp", "sinks-gcp"] }
vector-config = { git = "https://github.com/vectordotdev/vector", tag = "v0.37.1", default-features = false }
vector-lib = { git = "https://github.com/vectordotdev/vector", tag = "v0.37.1", default-features = false }

[dev-dependencies]
lazy_static = "1.4.0"
rand = "0.8"
regex = "1.10.3"

[build-dependencies]
prost-build = { version = "0.12", default-features = false }
tonic-build = { version = "0.10", default-features = false, features = ["transport", "prost"] }

[features]
default = [
    "sinks",
    "sources",
    "vector/api",
    "vector/api-client",
    "vector/enrichment-tables",
    # "vector/sinks",
    # "vector/sources",
    "vector/sources-dnstap",
    "vector/transforms",
    "vector/unix",
    "vector/enterprise",
]
sources = ["sources-logs", "sources-metrics"]
sources-logs = [
    "vector/sources-amqp",
    "vector/sources-aws_kinesis_firehose",
    "vector/sources-aws_s3",
    "vector/sources-aws_sqs",
    "vector/sources-datadog_agent",
    "vector/sources-demo_logs",
    "vector/sources-docker_logs",
    "vector/sources-exec",
    "vector/sources-file",
    "vector/sources-fluent",
    "vector/sources-gcp_pubsub",
    "vector/sources-heroku_logs",
    "vector/sources-http_server",
    "vector/sources-http_client",
    "vector/sources-internal_logs",
    "vector/sources-journald",
    # "vector/sources-kafka",
    "vector/sources-kubernetes_logs",
    "vector/sources-logstash",
    "vector/sources-nats",
    "vector/sources-opentelemetry",
    "vector/sources-pulsar",
    "vector/sources-file-descriptor",
    "vector/sources-redis",
    "vector/sources-socket",
    # "vector/sources-splunk_hec",
    "vector/sources-stdin",
    "vector/sources-syslog",
    "vector/sources-vector",
]
sources-metrics = [
    "vector/sources-apache_metrics",
    "vector/sources-aws_ecs_metrics",
    "vector/sources-eventstoredb_metrics",
    "vector/sources-host_metrics",
    "vector/sources-internal_metrics",
    "vector/sources-mongodb_metrics",
    "vector/sources-nginx_metrics",
    "vector/sources-postgresql_metrics",
    "vector/sources-prometheus",
    "vector/sources-statsd",
    "vector/sources-vector",
]
sinks = ["sinks-logs", "sinks-metrics"]
sinks-logs = [
    "vector/sinks-amqp",
    "vector/sinks-appsignal",
    "vector/sinks-aws_cloudwatch_logs",
    "vector/sinks-aws_kinesis_firehose",
    "vector/sinks-aws_kinesis_streams",
    "vector/sinks-aws_s3",
    "vector/sinks-aws_sqs",
    "vector/sinks-aws_sns",
    "vector/sinks-axiom",
    "vector/sinks-azure_blob",
    "vector/sinks-azure_monitor_logs",
    "vector/sinks-blackhole",
    "vector/sinks-chronicle",
    "vector/sinks-clickhouse",
    "vector/sinks-console",
    "vector/sinks-databend",
    "vector/sinks-datadog_events",
    "vector/sinks-datadog_logs",
    "vector/sinks-datadog_traces",
    "vector/sinks-elasticsearch",
    "vector/sinks-file",
    "vector/sinks-gcp",
    "vector/sinks-honeycomb",
    "vector/sinks-http",
    "vector/sinks-humio",
    "vector/sinks-influxdb",
    # "vector/sinks-kafka",
    "vector/sinks-mezmo",
    "vector/sinks-loki",
    "vector/sinks-mqtt",
    "vector/sinks-nats",
    "vector/sinks-new_relic_logs",
    "vector/sinks-new_relic",
    "vector/sinks-papertrail",
    "vector/sinks-pulsar",
    "vector/sinks-redis",
    "vector/sinks-sematext",
    "vector/sinks-socket",
    # "vector/sinks-splunk_hec",
    "vector/sinks-vector",
    "vector/sinks-webhdfs",
    "vector/sinks-websocket",
]
sinks-metrics = [
    "vector/sinks-appsignal",
    "vector/sinks-aws_cloudwatch_metrics",
    "vector/sinks-blackhole",
    "vector/sinks-console",
    "vector/sinks-datadog_metrics",
    "vector/sinks-greptimedb",
    "vector/sinks-humio",
    "vector/sinks-influxdb",
    # "vector/sinks-kafka",
    "vector/sinks-prometheus",
    "vector/sinks-sematext",
    "vector/sinks-statsd",
    "vector/sinks-vector",
    # "vector/sinks-splunk_hec",
]

[workspace]
members = ["vdev"]

[workspace.dependencies]
chrono = { version = "0.4.34", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5.3", default-features = false, features = ["derive", "error-context", "env", "help", "std", "string", "usage", "wrap_help"] }
indexmap = { version = "2.2.5", default-features = false, features = ["serde", "std"] }
serde = { version = "1.0.197", default-features = false, features = ["alloc", "derive", "rc"] }
serde_json = { version = "1.0.114", default-features = false, features = ["raw_value", "std"] }
toml = { version = "0.8.12", default-features = false, features = ["display", "parse"] }
