[package]
name = "aws-s3-upload-file"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
vector = { git = "https://github.com/vectordotdev/vector", tag = "v0.25.2", default-features = false, features = ["aws-config", "sinks-aws_s3"] }
vector-core = { git = "https://github.com/vectordotdev/vector", tag = "v0.25.2", default-features = false, features = ["vrl"] }
vector-config = { git = "https://github.com/vectordotdev/vector", tag = "v0.25.2" }
vector-config-common = { git = "https://github.com/vectordotdev/vector", tag = "v0.25.2" }
vector-config-macros = { git = "https://github.com/vectordotdev/vector", tag = "v0.25.2" }
vector-common = { git = "https://github.com/vectordotdev/vector", tag = "v0.25.2" }

common = { path = "../common" }

tracing = { version = "0.1.34", default-features = false }
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
toml = { version = "0.5.9", default-features = false }
tokio = { version = "1.21.2", default-features = false, features = ["full"] }
async-trait = { version = "0.1.57", default-features = false }
tokio-util = { version = "0.7", default-features = false, features = ["io", "time"] }
futures = { version = "0.3.24", default-features = false, features = ["compat", "io-compat"], package = "futures" }
md-5 = { version = "0.10", default-features = false }
base64 = { version = "0.13.0", default-features = false }
url = { version = "2.3.1", default-features = false, features = ["serde"] }
aws-sdk-s3 = { version = "0.19.0", default-features = false, features = ["rustls"] }
futures-util = { version = "0.3.21", default-features = false }
hex = { version = "0.4.3", default-features = false }
inventory = { version = "0.3.2", default-features = false }
