[package]
name = "aws-s3-upload-file"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
common = { path = "../../packages/common" }

async-trait = { version = "0.1.56", default-features = false }
aws-sdk-s3 = { git = "https://github.com/vectordotdev/aws-sdk-rust", rev = "3d6aefb7fcfced5fc2a7e761a87e4ddbda1ee670", default-features = false, features = ["native-tls"] }
base64 = { version = "0.13.0", default-features = false }
futures = { version = "0.3.21", default-features = false, features = ["compat", "io-compat"], package = "futures" }
futures-util = { version = "0.3.21", default-features = false }
hex = { version = "0.4.3", default-features = false }
md-5 = { version = "0.10", default-features = false }
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
tokio = { version = "1.20.4", default-features = false, features = ["full"] }
tokio-util = { version = "0.7", default-features = false, features = ["io", "time"] }
toml = { version = "0.7.5", default-features = false }
tracing = { version = "0.1.34", default-features = false }
typetag = { version = "0.2.8", default-features = false }
url = { version = "2.2.2", default-features = false, features = ["serde"] }
vector = { git = "https://github.com/vectordotdev/vector", tag = "v0.31.0", default-features = false, features = ["aws-config", "sinks-aws_s3"] }
vector-common = { git = "https://github.com/vectordotdev/vector", tag = "v0.31.0", default-features = false }
vector-config = { git = "https://github.com/vectordotdev/vector", tag = "v0.31.0", default-features = false }
vector-config-macros = { git = "https://github.com/vectordotdev/vector", tag = "v0.31.0", default-features = false }
vector-core = { git = "https://github.com/vectordotdev/vector", tag = "v0.31.0", default-features = false, features = ["vrl"] }
