[package]
name = "common"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
vector-core = { git = "https://github.com/vectordotdev/vector", tag = "v0.25.2", default-features = false, features = ["vrl"] }

serde = { version = "1.0.145", default-features = false, features = ["derive"] }
chrono = { version = "0.4.22", default-features = false,  features = ["clock", "serde"] }
tracing = { version = "0.1.34", default-features = false }
serde_json = { version = "1.0.85", default-features = false, features = ["std", "raw_value"] }
