[package]
name = "conprof"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
async-recursion = "1.0.0"
async-trait = { version = "0.1.56", default-features = false }
base64 = "0.21.4"
bytes = { version = "1.1.0", default-features = false, features = ["serde"] }
chrono = { version = "0.4.19", default-features = false, features = ["serde"] }
etcd-client = { version = "0.9", features = ["tls-roots"] }
futures = { version = "0.3.21", default-features = false, features = ["compat", "io-compat"], package = "futures" }
hex = { version = "0.4.3", default-features = false }
http = { version = "0.2.8", default-features = false }
hyper = { version = "0.14.19", default-features = false, features = ["client", "runtime", "http1", "http2", "server", "stream"] }
ordered-float = { version = "3.0.0", default-features = false }
prost = { version = "0.10.4", default-features = false, features = ["std"] }
prost-types = { version = "0.10.1", default-features = false }
reqwest = { version = "0.11", features = ["native-tls"] }
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.81", default-features = false, features = ["raw_value"] }
snafu = { version = "0.7.1", default-features = false, features = ["futures"] }
tokio = { version = "1.20.4", default-features = false, features = ["full"] }
tokio-openssl = { version = "0.6.3", default-features = false }
tokio-stream = { version = "0.1.9", default-features = false, features = ["net", "sync", "time"] }
toml = { version = "0.7.5", default-features = false }
tonic = { version = "0.7.2", default-features = false, features = ["transport", "codegen", "prost", "tls", "tls-roots", "compression"] }
tracing = { version = "0.1.34", default-features = false }
tracing-futures = { version = "0.2.5", default-features = false, features = ["futures-03"] }
typetag = { version = "0.2.8", default-features = false }
vector = { git = "https://github.com/vectordotdev/vector", tag = "v0.31.0", default-features = false }
vector-common = { git = "https://github.com/vectordotdev/vector", tag = "v0.31.0", default-features = false }
vector-config = { git = "https://github.com/vectordotdev/vector", tag = "v0.31.0", default-features = false }
vector-config-macros = { git = "https://github.com/vectordotdev/vector", tag = "v0.31.0", default-features = false }
vector-core = { git = "https://github.com/vectordotdev/vector", tag = "v0.31.0", default-features = false, features = ["vrl"] }

[dev-dependencies]
futures-util = "0.3"
rand = "0.8"
