[package]
name = "filename"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
vector = { git = "https://github.com/vectordotdev/vector", tag = "v0.23.3", default-features = false, features = ["aws-config", "sinks-aws_s3"] }
vector_core = { git = "https://github.com/vectordotdev/vector", tag = "v0.23.3", default-features = false, features = ["vrl"] }
file-source = { git = "https://github.com/vectordotdev/vector", tag = "v0.23.3" }
vector_config = { git = "https://github.com/vectordotdev/vector", tag = "v0.23.3" }
vector_config_macros = { git = "https://github.com/vectordotdev/vector", tag = "v0.23.3" }

tracing = { version = "0.1.34", default-features = false }
metrics = { version = "0.17.1", default-features = false, features = ["std"] }
typetag = { version = "0.1.8", default-features = false }
async-trait = { version = "0.1.56", default-features = false }
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
tokio = { version = "1.20.4", default-features = false, features = ["full"] }
toml = { version = "0.5.9", default-features = false }
