[package]
name = "filename"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
vector = { git = "https://github.com/vectordotdev/vector", tag = "v0.25.2", default-features = false, features = ["aws-config", "sinks-aws_s3"] }
vector-core = { git = "https://github.com/vectordotdev/vector", tag = "v0.25.2", default-features = false, features = ["vrl"] }
file-source = { git = "https://github.com/vectordotdev/vector", tag = "v0.25.2" }
vector-config = { git = "https://github.com/vectordotdev/vector", tag = "v0.25.2" }
vector-config-common = { git = "https://github.com/vectordotdev/vector", tag = "v0.25.2" }
vector-config-macros = { git = "https://github.com/vectordotdev/vector", tag = "v0.25.2" }
vector-common = { git = "https://github.com/vectordotdev/vector", tag = "v0.25.2" }

tracing = { version = "0.1.34", default-features = false }
metrics = "0.20.1"
async-trait = { version = "0.1.57", default-features = false }
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
tokio = { version = "1.21.2", default-features = false, features = ["full"] }
toml = { version = "0.5.9", default-features = false }
inventory = { version = "0.3.2", default-features = false }
