[package]
name = "filename"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
async-trait = { version = "0.1.56", default-features = false }
file-source = { git = "https://github.com/vectordotdev/vector", tag = "v0.31.0" }
inventory = { version = "0.3.6", default-features = false }
metrics = { version = "0.17.1", default-features = false, features = ["std"] }
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
tokio = { version = "1.20.4", default-features = false, features = ["full"] }
toml = { version = "0.7.5", default-features = false }
tracing = { version = "0.1.34", default-features = false }
typetag = { version = "0.2.8", default-features = false }
vector = { git = "https://github.com/vectordotdev/vector", tag = "v0.31.0", default-features = false, features = ["aws-config", "sinks-aws_s3"] }
vector-common = { git = "https://github.com/vectordotdev/vector", tag = "v0.31.0", default-features = false }
vector-config = { git = "https://github.com/vectordotdev/vector", tag = "v0.31.0", default-features = false }
vector-config-common = { git = "https://github.com/vectordotdev/vector", tag = "v0.31.0", default-features = false }
vector-config-macros = { git = "https://github.com/vectordotdev/vector", tag = "v0.31.0", default-features = false }
vector-core = { git = "https://github.com/vectordotdev/vector", tag = "v0.31.0", default-features = false, features = ["vrl"] }
