[package]
name = "topsql"
version = "0.0.1"
edition = "2021"
publish = false

[features]
vm-test = []

[dependencies]
vector = { git = "https://github.com/vectordotdev/vector", tag = "v0.25.2", default-features = false }
vector-core = { git = "https://github.com/vectordotdev/vector", tag = "v0.25.2", default-features = false, features = ["vrl"] }
vector-common = { git = "https://github.com/vectordotdev/vector", tag = "v0.25.2" }
vector-config = { git = "https://github.com/vectordotdev/vector", tag = "v0.25.2" }
vector-config-macros = { git = "https://github.com/vectordotdev/vector", tag = "v0.25.2" }
vector-config-common = { git = "https://github.com/vectordotdev/vector", tag = "v0.25.2" }

async-recursion = "1.0.0"
etcd-client = { version = "0.9", features = ["tls-roots"] }

prost-types = { version = "0.11.0", default-features = false }
tonic = { version = "0.8", default-features = false, features = ["transport", "codegen", "prost", "tls", "tls-roots", "gzip"] }
hex = { version = "0.4.3", default-features = false }
snafu = { version = "0.7.1", default-features = false, features = ["futures"] }
hyper = { version = "0.14.20", default-features = false, features = ["client", "runtime", "http1", "http2", "server", "stream"] }
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
http = { version = "0.2.8", default-features = false }
toml = { version = "0.5.9", default-features = false }
prost = { version = "0.11.0", default-features = false, features = ["std"] }
tokio = { version = "1.21.2", default-features = false, features = ["full"] }
serde_json = { version = "1.0.85", default-features = false, features = ["raw_value"] }
async-trait = { version = "0.1.57", default-features = false }
tracing = { version = "0.1.34", default-features = false }
tracing-futures = { version = "0.2.5", default-features = false, features = ["futures-03"] }
tokio-openssl = { version = "0.6.3", default-features = false }
futures = { version = "0.3.24", default-features = false, features = ["compat", "io-compat"], package = "futures" }
tokio-stream = { version = "0.1.10", default-features = false, features = ["net", "sync", "time"] }
ordered-float = { version = "3.1.0", default-features = false }
chrono = { version = "0.4.22", default-features = false, features = ["serde"] }
bytes = { version = "1.2.1", default-features = false, features = ["serde"] }
inventory = { version = "0.3.2", default-features = false }

[build-dependencies]
prost-build = { version = "0.11.1", default-features = false }
tonic-build = { version = "0.8", default-features = false, features = ["transport", "prost"] }

[dev-dependencies]
rand = "0.8"
futures-util = "0.3"
