[package]
name = "vm-import"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
vector = { git = "https://github.com/vectordotdev/vector", tag = "v0.23.3", default-features = false }

bytes = { version = "1.1.0", default-features = false, features = ["serde"] }
flate2 = { version = "1.0.24", default-features = false, features = ["default"] }
futures-util = { version = "0.3.21", default-features = false }
http = { version = "0.2.8", default-features = false }
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.81", default-features = false, features = ["raw_value"] }
inventory = { version = "0.1.10", default-features = false }
tracing = { version = "0.1.34", default-features = false }
async-trait = { version = "0.1.56", default-features = false }
toml = { version = "0.5.9", default-features = false }
typetag = { version = "0.1.8", default-features = false }
hyper = { version = "0.14.19", default-features = false, features = ["client", "runtime", "http1", "http2", "server", "stream"] }

[dev-dependencies]
topsql = { path = "../topsql", features = ["vm-test"] }
