[package]
name = "vm-import"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
vector = { git = "https://github.com/vectordotdev/vector", tag = "v0.25.2", default-features = false }
vector-config = { git = "https://github.com/vectordotdev/vector", tag = "v0.25.2" }
vector-config-macros = { git = "https://github.com/vectordotdev/vector", tag = "v0.25.2" }
vector-config-common = { git = "https://github.com/vectordotdev/vector", tag = "v0.25.2" }

bytes = { version = "1.2.1", default-features = false, features = ["serde"] }
flate2 = { version = "1.0.24", default-features = false, features = ["default"] }
futures-util = { version = "0.3.21", default-features = false }
http = { version = "0.2.8", default-features = false }
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.85", default-features = false, features = ["raw_value"] }
tracing = { version = "0.1.34", default-features = false }
async-trait = { version = "0.1.57", default-features = false }
toml = { version = "0.5.9", default-features = false }
hyper = { version = "0.14.20", default-features = false, features = ["client", "runtime", "http1", "http2", "server", "stream"] }
inventory = { version = "0.3.2", default-features = false }

[dev-dependencies]
topsql = { path = "../topsql", features = ["vm-test"] }
