[package]
name = "vm-import"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
async-trait = { version = "0.1.56", default-features = false }
bytes = { version = "1.1.0", default-features = false, features = ["serde"] }
flate2 = { version = "1.0.24", default-features = false, features = ["default"] }
futures-util = { version = "0.3.21", default-features = false }
http = { version = "0.2.8", default-features = false }
hyper = { version = "0.14.19", default-features = false, features = ["client", "runtime", "http1", "http2", "server", "stream"] }
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.81", default-features = false, features = ["raw_value"] }
toml = { version = "0.7.5", default-features = false }
tracing = { version = "0.1.34", default-features = false }
typetag = { version = "0.2.8", default-features = false }
vector = { git = "https://github.com/vectordotdev/vector", tag = "v0.31.0", default-features = false }
vector-config = { git = "https://github.com/vectordotdev/vector", tag = "v0.31.0", default-features = false }
vector-config-macros = { git = "https://github.com/vectordotdev/vector", tag = "v0.31.0", default-features = false }
vector-core = { git = "https://github.com/vectordotdev/vector", tag = "v0.31.0", default-features = false }

[dev-dependencies]
topsql = { path = "../topsql", features = ["vm-test"] }
